--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+<title>The Wormaid</title>
+<style type="text/css">
+body {
+  background-color:rgb(0, 0, 116);
+}
+
+p {
+	color: #fff; 
+	font-size: 1.4em; 
+	text-align: center; 
+	text-shadow: 0 0 32px rgba(255,255,255,0.25);
+}
+
+div.video {
+  margin-top: 75px;
+}
+
+div.text {
+	background-color:rgb(0, 0, 0);
+	max-width: 500px;
+}
+
+.video-responsive{
+    margin-top: 75px;
+	margin-bottom: 75px;
+	
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 4px;
+}
+.column {
+	flex: 50%;
+	padding: 0 4px;
+}
+.column img {
+	margin-top: 8px;
+	vertical-align: middle;
+}
+</style>
+</head>
+
+<body>
+
+<div>
 <center>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QxA7V75OkhI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+<!-- youtube -->
+<div class="video-responsive">
+<iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/pA5EbfigcJA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<!-- end youtube -->
 
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
@@ -13,7 +65,7 @@
 <div id="mc_embed_signup">
 <form action="https://wormaid-game.us2.list-manage.com/subscribe/post?u=552cb669ae529bfe814ac59b7&amp;id=c1196aa43e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe</label>
+	<label for="mce-EMAIL">Mailing List Subscribe</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_552cb669ae529bfe814ac59b7_c1196aa43e" tabindex="-1" value=""></div>
@@ -21,8 +73,32 @@
     </div>
 </form>
 </div>
-
 <!--End mc_embed_signup-->
+
+<table>
+<tr>
+	<a href="images/1.png"><img src="images/1_small.png" alt="Screenshot"/></a>
+	<a href="images/2.png"><img src="images/2_small.png" alt="Screenshot"/></a>
+</tr>
+<tr>
+	<a href="images/3.png"><img src="images/3_small.png" alt="Screenshot"/></a>
+	<a href="images/4.png"><img src="images/4_small.png" alt="Screenshot"/></a>
+		</tr>
+<tr>
+	<a href="images/5.png"><img src="images/5_small.png" alt="Screenshot"/></a>
+	<a href="images/6.png"><img src="images/6_small.png" alt="Screenshot"/></a>
+		</tr>
+<tr>
+	<a href="images/7.png"><img src="images/7_small.png" alt="Screenshot"/></a>
+	<a href="images/8.png"><img src="images/8_small.png" alt="Screenshot"/></a>
+</tr>
+</table>
+
+
 
 
 </center>
+<div>
+
+</body>
+</html>
