added itchio demo link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ div.text {
 </div>
 <!-- end youtube -->
 
+
+<!-- itchio embedded -->
+<div>
+<iframe frameborder="0" src="https://itch.io/embed/820117" width="552" height="167"><a href="https://timothybarnes.itch.io/the-wormaid">The Wormaid by Timothy Barnes</a></iframe>
+</div>
+
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -93,9 +99,6 @@ div.text {
 	<a href="images/8.png"><img src="images/8_small.png" alt="Screenshot"/></a>
 </tr>
 </table>
-
-
-
 
 </center>
 <div>
